--- a/src/css/indexStyle.css
+++ b/src/css/indexStyle.css
@@ -11,7 +11,7 @@ body{
     width: 100%;
     height:100%;
     
-    filter: brightness(0.80) blur(0px);
+    filter: brightness(0.95) blur(0px);
     z-index: -999;
 }
 .list-group-item {
@@ -19,12 +19,20 @@ body{
     display: block;
     padding: 10px 15px;
     margin-bottom: -1px;
-    background-color: rgba(255,255,255,0.1)!important;
+    background-color: rgba(0,0,0,0.1)!important;
     border: 1px solid #ddd;
     
 }
-
+.container{
+    margin-top: 1%;
+    margin-bottom: 1%;
+    background-color: rgba(0,0,0,0.15)!important;
+}
 .modal-content{
     background-color: rgba(255,255,255,0.8)!important;
     color: #000000;
+}
+
+small{
+    color:#ffffff!important;
 }
